--- a/umonya/requirements.txt
+++ b/umonya/requirements.txt
@@ -1,10 +1,7 @@
 Django==1.5.1
-<<<<<<< HEAD
-Pillow-PIL
-=======
-oath2client==1.1
-httplib2==0.8
-python-gflags==2.0
 gdata==2.0.18
+httplib2==0.8
+oauth2client==1.1
 PIL==1.1.7
->>>>>>> Created Contact Forms
+Pillow-PIL
+python-gflags==2.0
