Made changes to requirements for Pillow-PIL and Django Changed the travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,17 @@ python:
     - "2.6"
     - "2.7"
     - "pypy"
+env:
+    - DJANGO=1.5.1
 install:
+    - pip install -q Django==$DJANGO --use-mirrors
+    - pip install pep8 --use-mirrors
+    - pip install https://github.com/dcramer/pyflakes/tarball/master
     - pip install -r umonya/requirements.txt --use-mirrors
     - pip install --upgrade https://github.com/django-debug-toolbar/django-debug-toolbar/archive/master.zip
     - umonya/manage.py syncdb --noinput
+before_script:
+    - "pep8 --exclude=migrations --ignore=E501,E225 src"
+    - pyflakes -x W src
 script:
-    - umonya/manage.py test apps/about
-    - umonya/manage.py test apps/announcements
-    - umonya/manage.py test apps/blog
-    - umonya/manage.py test apps/contact
-    - umonya/manage.py test apps/registration
-    - umonya/manage.py test apps/resources
-    - umonya/manage.py test apps/sponsor_us
+    - umonya/manage.py test apps
